@@ -18,12 +18,14 @@ excludes = ['cpuadoc', 'pip', 'imodenv', 'uitest']
 # Directories to search for the file list, in alphabetic order, and corresponding
 # extensions to glob for
 listDirs = ['3dmodHelp', '3dmodimages', 'ctfHelp', 'etomoImages', 'joinImages', 'libhelp',
-            'man', 'midasHelp', 'miscImages', 'plughelp']
-dirExts = ['[hp]*', '*', '*', '*', '*', '*', 'html', 'html', '*', '*']
+            'man', 'midasHelp', 'miscImages', '3dmodHelp/plughelp']
+dirExts = ['[hp]*', '*', '*', '*', '*', '*', 'html', 'html', '*', 'html']
 
 # Files and directories to change Ctrl to Apple in on Mac
 appleFiles = ['3dmodguide.html']
 appleDirs = ['3dmodHelp', 'midasHelp']
+appleSubDirs = ['3dmodHelp/plughelp']
+appleSubBaseDirs = ['plughelp']
 
 stubInd = 0
 outlines = []
@@ -64,14 +66,14 @@ stubLines = readTextFile(stubFile)
 
 # Copy through 3dmod up to plugins and get the plugin pages
 copyToINSERT(instext1)
-plugfiles = glob.glob(os.path.join('plughelp', '*.html'))
+plugfiles = glob.glob(os.path.join('3dmodHelp/plughelp', '*.html'))
 for plug in plugfiles:
    basename = os.path.basename(plug)
    title = findTitle(plug)
    if not title:
       title = plug
    outlines.append('                        <section title="' + title + \
-                      '" ref="./plughelp/' + basename + '#TOP"></section>')
+                      '" ref="./3dmodHelp/plughelp/' + basename + '#TOP"></section>')
 
 # Copy to man pages and insert those
 copyToINSERT(instext2)
@@ -121,15 +123,17 @@ if sys.platform.find('darwin') >= 0:
       os.rename(name, name + '.save')
    for name in appleFiles:
       pysed(sedcom, name + '.save', name)
-   for dir in appleDirs:
+   for dir in appleDirs + appleSubDirs:
       savedir = dir + '.save'
+      if dir in appleSubDirs:
+         savedir = os.path.dirname(dir) + '.save/' + os.path.basename(dir)
       os.mkdir(dir)
       allFiles = glob.glob(savedir + '/*')
       for subfile in allFiles:
          basename = os.path.basename(subfile)
          if basename.endswith('.html'):
             pysed(sedcom, subfile, dir + '/' + basename)
-         else:
+         elif basename not in appleSubBaseDirs:
             shutil.copyfile(subfile, dir + '/' + basename)
 
 # Make the help file for everyone now
